--- a/Components/Layout/NavMenu.razor
+++ b/Components/Layout/NavMenu.razor
@@ -36,10 +36,15 @@
         {
             if(UserSessionManager.Role == Role.Admin){
                 <div class="nav-item px-3">
-                <NavLink class="nav-link" href="/admin-panel" Match="NavLinkMatch.All">
-                    <span class="bi bi-plus-square-fill-nav-menu" aria-hidden="true"></span> @L["users"]
-                </NavLink>
-            </div>
+                    <NavLink class="nav-link" href="/admin-panel" Match="NavLinkMatch.All">
+                        <span class="bi bi-plus-square-fill-nav-menu" aria-hidden="true"></span> @L["users"]
+                    </NavLink>
+                </div>
+                <div class="nav-item px-3">
+                    <NavLink class="nav-link" href="/products" Match="NavLinkMatch.All">
+                        <span class="bi bi-plus-square-fill-nav-menu" aria-hidden="true"></span> @L["products"]
+                    </NavLink>
+                </div>
             }
         }
     </nav>
