web service, exchange model, exchange razor page created. Radzen charts package added. 24.07.2025 task is not finished yet

--- a/Components/Layout/MainLayout.razor
+++ b/Components/Layout/MainLayout.razor
@@ -5,8 +5,11 @@
 @inject IStringLocalizer<BlazorApp1.Resources.SharedResource> L
 
 
-
-
+        <HeadContent>
+            @* <script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/3.7.1/chart.min.js"></script> *@
+            <script src="_content/Radzen.Blazor/Radzen.Blazor.js"></script>
+        </HeadContent>
+    
         <div class="page">
             <div class="sidebar">
                 <NavMenu />
