--- a/Components/Pages/Search.razor
+++ b/Components/Pages/Search.razor
@@ -6,7 +6,7 @@
 @using Microsoft.Extensions.Localization
 @using System.Globalization
 @using Microsoft.AspNetCore.Http
-@inject DialogService DialogService
+@inject CustomDialogService DialogService
 @inject AppDbContext db
 @rendermode InteractiveServer
 @inject IJSRuntime JS
