--- a/Components/Pages/Users.razor
+++ b/Components/Pages/Users.razor
@@ -59,25 +59,25 @@ else
             <th @onclick="() => SortBy(SortUserColumn.Id)">
                 @L["id"]
                 @(_selectedSortColumn == SortUserColumn.Id
-                                ? (_selectedSortDirection == SortDirection.Ascending ? " ↑" : " ↓")
+                                ? (_selectedSortDirection == TableSortDirection.Ascending ? " ↑" : " ↓")
                                 : "")
             </th>
             <th @onclick="() => SortBy(SortUserColumn.Username)">
                 @L["username"]
                 @(_selectedSortColumn == SortUserColumn.Username
-                                ? (_selectedSortDirection == SortDirection.Ascending ? " ↑" : " ↓")
+                                ? (_selectedSortDirection == TableSortDirection.Ascending ? " ↑" : " ↓")
                                 : "")
             </th>
             <th @onclick="() => SortBy(SortUserColumn.Role)">
                 @L["role"]
                 @(_selectedSortColumn == SortUserColumn.Role
-                                ? (_selectedSortDirection == SortDirection.Ascending ? " ↑" : " ↓")
+                                ? (_selectedSortDirection == TableSortDirection.Ascending ? " ↑" : " ↓")
                                 : "")
             </th>
             <th @onclick="() => SortBy(SortUserColumn.CreatedAt)">
                 @L["createdAt"]
                 @(_selectedSortColumn == SortUserColumn.CreatedAt
-                                ? (_selectedSortDirection == SortDirection.Ascending ? " ↑" : " ↓")
+                                ? (_selectedSortDirection == TableSortDirection.Ascending ? " ↑" : " ↓")
                                 : "")
             </th>
                 <th>@L["actions"]</th>
@@ -155,7 +155,7 @@ else
     private List<User> _users = [];
     private EditingUser _editingUser = new EditingUser{Role=Role.User};
     private bool _isEditMode = false;
-    private SortDirection _selectedSortDirection { get; set; }
+    private TableSortDirection _selectedSortDirection { get; set; }
     private SortUserColumn _selectedSortColumn { get; set; }
     private bool _visible = false;
     private string _message = "";
@@ -245,7 +245,7 @@ else
 
         _totalCount = await query.CountAsync();
 
-        if (_selectedSortDirection == SortDirection.Ascending)
+        if (_selectedSortDirection == TableSortDirection.Ascending)
         {
             switch (_selectedSortColumn)
             {
@@ -256,7 +256,7 @@ else
                 default: query = query.OrderBy(c => c.Id); break;
             }
         }
-        else if (_selectedSortDirection == SortDirection.Descending)
+        else if (_selectedSortDirection == TableSortDirection.Descending)
         {
             switch (_selectedSortColumn)
             {
@@ -303,14 +303,14 @@ else
     {
         if (_selectedSortColumn == column)
         {
-            _selectedSortDirection = _selectedSortDirection == SortDirection.Ascending
-                ? SortDirection.Descending
-                : SortDirection.Ascending;
+            _selectedSortDirection = _selectedSortDirection == TableSortDirection.Ascending
+                ? TableSortDirection.Descending
+                : TableSortDirection.Ascending;
         }
         else
         {
             _selectedSortColumn = column;
-            _selectedSortDirection = SortDirection.Ascending;
+            _selectedSortDirection = TableSortDirection.Ascending;
         }
 
         _currentPage = 1;
