--- a/Components/Layout/NavMenu.razor
+++ b/Components/Layout/NavMenu.razor
@@ -31,6 +31,11 @@
                     <span class="bi bi-plus-square-fill-nav-menu" aria-hidden="true"></span> @L["register"]
                 </NavLink>
             </div>
+            <div class="nav-item px-3">
+                <NavLink class="nav-link" href="/exchanges" Match="NavLinkMatch.All">
+                    <span class="bi bi-plus-square-fill-nav-menu" aria-hidden="true"></span> @L["exchanges"]
+                </NavLink>
+            </div>
         }
         else
         {
